<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ededed" >

    <TextView
        android:id="@+id/textView_Feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/feedback_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffbe73"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_under_feedback_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_Feedback"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/under_feedback_title"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#0a7aa6"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/etUserFeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignLeft="@+id/textView_Feedback"
        android:layout_alignRight="@+id/textView_Feedback"
        android:layout_below="@+id/textView_under_feedback_title"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:gravity="bottom"
        android:hint="@string/feedback_hint"
        android:inputType="textMultiLine" >
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:text="@string/feedback_send" />
 
</RelativeLayout>